# tg_store_main_bot

./: .env  README.md  docker-compose.override.yml  docker-compose.yml  makefile
pgnbot-tg-store-main/: traefik-config.yml
pgnbot-tg-store-main/src/: redis.conf
pgnbot-tg-store-main/src/app/: test_payment.ipynb
pgnbot-tg-store-main/src/app/app/: main.py
pgnbot-tg-store-main/src/app/app/db/: mongodb.py  redisdb.py
pgnbot-tg-store-main/src/app/app/functions/: products.py
pgnbot-tg-store-main/src/app/app/markups/: messages.py
pgnbot-tg-store-main/src/app/app/models/: order.py  payment.py  payment_callback.py  user.py
pgnbot-tg-store-main/src/app/app/routes/endpoints/admin/: notify.py
pgnbot-tg-store-main/src/app/app/utils/: verify_callback.py
scripts/: deploy.sh
src/: dockerfile
src/app/: pyproject.toml
src/app/app/: bot.py  main.py
src/app/app/core/: config.py
src/app/app/markups/: reply.py
src/app/app/middlewares/: Admin.py  User.py  __init__.py
src/app/app/models/: base.py  inventory.py  product.py
src/app/app/routes/: router.py
src/app/app/routes/endpoints/: basic_commands.py  order_commands.py
src/app/app/routes/endpoints/admin/: products.py
src/app/app/utils/: generators.py
