[tool.poetry]
name = "pgnbot"
version = "0.1.0"
description = ""
authors = ["Admin <abror@aliboyev.com>"]


[tool.poetry.dependencies]
python = "^3.9"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
aiohttp = "^3.8.3"
#uvloop = "^0.17.0"
ujson = "^5.5.0"
cchardet = "^2.1.7"
aiodns = "^3.0.0"
backoff = "^2.2.1"
python-dateutil = "^2.8.2"
xmltodict = "^0.13.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.1"
aiogram = "3.0.0b8"
pydantic = ">=2.0.0"
fastapi = "^0.100.0"
redis = "^4.6.0"
odmantic = "^0.9.2"
pydantic-settings = "^2.0.2"
pyopenssl = "^23.2.0"


[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^22.10.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
